ts(unit-test): Adding-test-library

--- a/front/src/app.less
+++ b/front/src/app.less
@@ -1,14 +1,14 @@
 
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
+.app-logo {
   /*animation: App-logo-spin infinite 20s linear;*/
   height: 80px;
 }
 
-.App-header {
+.app-header {
   /*background-color: #222;*/
   /*background-image: url("./assets/images/xlBurger1.jpeg");*/
 
@@ -18,7 +18,7 @@
   color: white;
 }
 
-.App-intro {
+.app-intro {
   font-size: large;
 }
 
